Move portman config to root

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Package to generate Postman workspace for Terminal API",
   "scripts": {
-    "generate": "portman --cliOptionsFile portman/portman-cli.json"
+    "generate": "portman --cliOptionsFile portman-cli.json"
   },
   "keywords": [],
   "author": "",
