--- a/portman-config.json
+++ b/portman-config.json
@@ -187,7 +187,7 @@
       ]
     },
     {
-      "openApiOperationId": "listVehicles",
+      "openApiOperationId": "getVehicle",
       "overwriteRequestPathVariables": [
         {
           "key": "id",
